--- a/Site/MasterPages/Frontend.master
+++ b/Site/MasterPages/Frontend.master
@@ -1,5 +1,6 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="Frontend.master.cs" Inherits="MasterPages_Frontend" %>
 
+
 <!DOCTYPE html>
 
 <html>
@@ -14,8 +15,17 @@
     <form id="form1" runat="server">
         <div id="PageWrapper">
             <header><a href="/"></a></header>
-            <nav>Menu Goes Here</nav>
+            <nav>
+                <asp:Menu ID="Menu1" runat="server" CssClass="MainMenu" DataSourceID="SiteMapDataSource1" Orientation="Horizontal" StaticEnableDefaultPopOutImage="False"></asp:Menu>
+                <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" ShowStartingNode="False" />
+                <asp:TreeView ID="TreeView1" runat="server" DataSourceID="SiteMapDataSource1" ShowExpandCollapse="False">
+                    <LevelStyles>
+                        <asp:TreeNodeStyle CssClass="FirstLevelMenuItems" />
+                    </LevelStyles>
+                </asp:TreeView>
+            </nav>
             <section id="MainContent">
+                <asp:SiteMapPath ID="SiteMapPath1" runat="server"></asp:SiteMapPath><br /><br />
                 <asp:ContentPlaceHolder ID="cpMainContent" runat="server">
                 </asp:ContentPlaceHolder>
             </section>
@@ -25,8 +35,12 @@
                     <asp:ListItem>DarkGray</asp:ListItem>
 
                 </asp:DropDownList>
+                <br />
+                <br />
+                <wrox:banner ID="Banner1" runat="server" DisplayDirection="Vertical"/>
+                <br />
             </aside>
-            <footer>Footer Goes Here</footer>
+            <footer>Footer Goes Herefooter>
         </div>
     </form>
 </body>
